pamc/src/tests/sample_code/should_fail/multi_file/bind/type_priv/src/mod.ph
mod nat;

type NatList {
    .Nil: NatList,
    .Cons(car: nat.Nat, cdr: NatList): NatList,
}
